# speedtest-scheduler

./: .gitignore  LICENSE  README.md  app.py  setup.cfg  speedtest_scheduler.py
src/speedtest_scheduler/: app.py
