[metadata]
name = speedtest-scheduler 
version = 0.0.3
author = Chris Whitlock
author_email = chriswhitlock417@gmail.com
description = A simple scheduler for speedtest-cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cw417/speedtest-scheduler
project_urls =
    Bug Tracker = https://github.com/cw417/speedtest-scheduler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src